Developed more tests, added Strategies, SentenceValidators and some other stuff