@@ -4,21 +4,15 @@ import model.BaseTokenTypes;
 import model.Token;
 import org.json.JSONObject;
 
-import java.io.BufferedReader;
 import java.io.File;
-import java.io.FileReader;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class FileParser {
-
-  private final String ARROW = "->";
-  private final String TOKENS = "Tokens:";
-  private final String EXPECTED = "Expected:";
 
   //Need to define the correct format of expected results, should be a JSON
   public List<Token> getTokens(String filePath) throws IOException {
@@ -28,21 +22,12 @@ public class FileParser {
     JSONObject json = new JSONObject(content);
     String tokenString = json.get("tokens").toString();
 
-    List<String> tempTokenList = Arrays.stream(tokenString.split(ARROW)).toList();
+    String ARROW = "->";
+    List<String> tempTokenList = Arrays.stream(tokenString.split(ARROW)).map(String::strip).toList();
 
     if(tempTokenList.size() == 1) return List.of();
 
-    //Post-modification
-    tempTokenList = tempTokenList.stream().map(String::strip).toList();
-
-
-    List<Token> finalTokenList = new ArrayList<>();
-
-    for (String token : tempTokenList) {
-      Pair<BaseTokenTypes, String> pair = getTokenType(token);
-      finalTokenList.add(new Token(pair.first, 0, 0, pair.second));
-    }
-    return finalTokenList;
+    return tempTokenList.stream().map(this::getTokenType).map(pair -> new Token(pair.first, 0, 0, pair.second)).collect(Collectors.toList());
   }
 
   private Pair<BaseTokenTypes, String> getTokenType(String token) {
